--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "@ngrx/store-devtools": "5.2.0",
     "@ngx-translate/core": "^8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
+    "ajv": "^6.5.2",
+    "ajv-errors": "^1.0.0",
+    "ajv-keywords": "^3.2.0",
     "chart.js": "2.7.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
