build: increase max_old_space_size for node during build process

--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "npm run build-themes && ng serve",
     "hmr": "npm run build-themes && ng serve --hmr -e=hmr",
     "build-themes": "sh ./scripts/generate-themes.sh",
-    "build": "npm run build-themes && ng build --prod",
-    "build:aot": "npm run build-themes && ng build --prod --aot",
+    "build": "npm run build-themes && node --max_old_space_size=8192 ./node_modules/@angular/cli/bin/ng build",
     "test": "ng test --code-coverage --watch=false",
     "test:watch": "ng test",
     "lint": "ng lint",
