update config after review

--- a/src/config/config-example.json
+++ b/src/config/config-example.json
@@ -1,6 +1,6 @@
 {
-  "defaultDomain": "root",
-  "sessionRefreshInterval": 300,
+  "defaultDomain": "domain",
+  "sessionRefreshInterval": 60,
   "apiDocLink": "https://cloudstack.apache.org/api/apidocs-4.11/",
   "extensions": {
     "webShell": true,
