--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -4,7 +4,7 @@
     "outDir": "../out-tsc/app",
     "module": "commonjs",
     "baseUrl": "",
-    "types": []
+    "types": ["node"]
   },
   "exclude": [
     "test.ts",
