--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "npm run build-themes && ng serve",
-    "hmr": "npm run build-themes && ng serve --hmr -e=hmr",
+    "hmr": "npm run build-themes && ng serve --configuration hmr",
     "build-themes": "sh ./scripts/generate-themes.sh",
     "build": "npm run build-themes && node --max_old_space_size=8192 ./node_modules/@angular/cli/bin/ng build",
     "test": "ng test --code-coverage --watch=false",
