--- a/angular.json
+++ b/angular.json
@@ -95,7 +95,7 @@
             "main": "src/test.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
-            "karmaConfig": "./karma.conf.js",
+            "karmaConfig": "src/karma.conf.js",
             "styles": [
               "node_modules/mdi/css/materialdesignicons.min.css",
               "src/style/app.scss"
