--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "ngx-clipboard": "^11.1.7",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^6.3.2",
+    "rxjs-compat": "^6.3.2",
     "showdown": "^1.8.4",
     "sprintf-js": "^1.1.1",
     "uuid": "^3.1.0",
@@ -73,7 +74,7 @@
     "jasmine-core": "~2.6.2",
     "jasmine-marbles": "^0.3.1",
     "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
+    "karma": "~1.7.1",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
