--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.1.7",
+    "@angular/animations": "6.1.8",
     "@angular/cdk": "6.4.7",
-    "@angular/common": "6.1.7",
-    "@angular/core": "6.1.7",
-    "@angular/forms": "6.1.7",
-    "@angular/http": "6.1.7",
+    "@angular/common": "6.1.8",
+    "@angular/core": "6.1.8",
+    "@angular/forms": "6.1.8",
+    "@angular/http": "6.1.8",
     "@angular/material": "6.4.7",
-    "@angular/platform-browser": "6.1.7",
-    "@angular/platform-browser-dynamic": "6.1.7",
-    "@angular/platform-server": "6.1.7",
-    "@angular/router": "6.1.7",
+    "@angular/platform-browser": "6.1.8",
+    "@angular/platform-browser-dynamic": "6.1.8",
+    "@angular/platform-server": "6.1.8",
+    "@angular/router": "6.1.8",
     "@ng-idle/core": "6.0.0-beta.3",
     "@ng-idle/keepalive": "6.0.0-beta.3",
     "@ngrx/effects": "6.1.0",
@@ -61,31 +61,30 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
     "@angular/cli": "^6.2.1",
-    "@angular/compiler": "6.1.7",
-    "@angular/compiler-cli": "6.1.7",
-    "@angular/language-service": "6.1.7",
+    "@angular/compiler": "6.1.8",
+    "@angular/compiler-cli": "6.1.8",
+    "@angular/language-service": "6.1.8",
     "@angularclass/hmr": "^2.1.3",
-    "@types/jasmine": "2.8.3",
+    "@types/jasmine": "~2.8.6",
     "@types/node": "^8.0.16",
     "@types/showdown": "^1.7.1",
     "codelyzer": "~4.2.1",
-    "conventional-changelog": "^1.1.3",
-    "conventional-changelog-cli": "^1.3.2",
-    "jasmine-core": "~2.6.2",
-    "jasmine-marbles": "^0.3.1",
-    "jasmine-spec-reporter": "~4.1.0",
+    "conventional-changelog": "^2.0.3",
+    "conventional-changelog-cli": "^2.0.5",
+    "jasmine-core": "~2.99.1",
+    "jasmine-marbles": "^0.4.0",
+    "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.0",
+    "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-junit-reporter": "^1.2.0",
     "karma-mocha-reporter": "^2.2.3",
     "ngrx-store-freeze": "^0.2.0",
-    "protractor": "~5.1.2",
-    "ts-node": "^3.3.0",
-    "tslint": "~5.11.0",
-    "typescript": "2.9.2"
+    "protractor": "~5.3.0",
+    "ts-node": "~5.0.1",
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   }
 }
