--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-browser-dynamic": "6.1.8",
     "@angular/platform-server": "6.1.8",
     "@angular/router": "6.1.8",
+    "@mdi/font": "^2.7.94",
     "@ng-idle/core": "6.0.0-beta.3",
     "@ng-idle/keepalive": "6.0.0-beta.3",
     "@ngrx/effects": "6.1.0",
@@ -44,7 +45,6 @@
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.4",
-    "mdi": "^2.2.43",
     "moment": "^2.18.1",
     "ng-dynamic-component": "^3.0.0",
     "ng2-dragula": "1.5.0",
