--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,7 @@
               "src/agreements"
             ],
             "styles": [
-              "node_modules/mdi/css/materialdesignicons.min.css",
+              "node_modules/@mdi/font/css/materialdesignicons.min.css",
               "src/style/app.scss"
             ],
             "scripts": []
@@ -97,7 +97,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "node_modules/mdi/css/materialdesignicons.min.css",
+              "node_modules/@mdi/font/css/materialdesignicons.min.css",
               "src/style/app.scss"
             ],
             "scripts": [],
