--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -3,11 +3,12 @@
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "module": "commonjs",
-    "baseUrl": "",
-    "types": ["node"]
+    "types": [
+      "node"
+    ]
   },
   "exclude": [
-    "test.ts",
+    "src/test.ts",
     "**/*.spec.ts"
   ],
   "include": [
