--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "ng test --code-coverage --watch=false",
     "test:watch": "ng test",
     "lint": "ng lint",
-    "lint:report": "mkdir -p reports; ng lint --format checkstyle > reports/checkstyle-result.xml",
+    "lint:ci": "mkdir -p reports; ng lint cloudstack-ui --format checkstyle > reports/checkstyle-result.xml",
     "e2e": "ng e2e",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
