--- a/src/config/config-example.json
+++ b/src/config/config-example.json
@@ -160,5 +160,10 @@
         "computeOfferings": ["9c81af12-f15b-41f0-9dec-2a837e1dec29"]
       }
     }
+  },
+  "maxRootDiskSize": 512,
+  "defaultSecurityGroupName": {
+    "en": "default name",
+    "ru": "имя по умолчанию"
   }
 }
