--- a/package.json
+++ b/package.json
@@ -79,9 +79,12 @@
     "karma-junit-reporter": "^1.2.0",
     "karma-mocha-reporter": "^2.2.3",
     "ngrx-store-freeze": "^0.2.0",
+    "prettier": "1.14.3",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
+    "tslint-config-airbnb": "^5.11.0",
+    "tslint-config-prettier": "^1.15.0",
     "typescript": "~2.7.2"
   }
 }
