build: add coveralls

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,9 @@ before_install:
  - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
  - sudo dpkg -i google-chrome*.deb
 
+after_success:
+  - yarn coveralls
+
 before_deploy:
   - docker build -t ${DOCKER_USER}/${DOCKER_REPO} .
 
