feat(vm-creation): vm creation dialog enhancements (#1292)
* feat(vm-creation): vm creation dialog enchancements

* feat(vm-creation): add description to config

* feat(vm-creation): rename default group in reducer

* fixes after angular updating

* update after removing keyboard

* fix lint

* fixes after review

* fixes after review

* fix style

* change conditional for slider showing

* after review

* fix bug

* remove maxRootDiskSize

* fix test

* fix test

* remove maxRootDiskSize from interface, rename const

* fix vm effects: if is Template then min value = template size, when is Iso with custom disk offering min value is 10

--- a/src/config/config-example.json
+++ b/src/config/config-example.json
@@ -149,5 +149,9 @@
         "computeOfferings": ["9c81af12-f15b-41f0-9dec-2a837e1dec29"]
       }
     }
+  },
+  "defaultSecurityGroupName": {
+    "en": "default name",
+    "ru": "имя по умолчанию"
   }
 }
