feat(sidebar): add resizability

--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,7 @@
             ],
             "styles": [
               "node_modules/@mdi/font/css/materialdesignicons.min.css",
+              "node_modules/angular2-draggable/css/resizable.min.css",
               "src/style/app.scss"
             ],
             "scripts": []
