--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cloudstack-ui",
-  "version": "1.411.21",
+  "version": "1.10.1",
   "license": "Apache-2.0",
   "scripts": {
     "ng": "ng",
@@ -44,6 +44,7 @@
     "ajv-keywords": "^3.2.0",
     "chart.js": "2.7.0",
     "core-js": "^2.4.1",
+    "global": "^4.3.2",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
@@ -54,6 +55,7 @@
     "showdown": "^1.8.4",
     "uuid": "^3.1.0",
     "web-animations-js": "2.3.1",
+    "yarn": "^1.10.1",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
