--- a/src/config/config-example.json
+++ b/src/config/config-example.json
@@ -15,13 +15,13 @@
   ],
   "securityGroupTemplates": [
     {
-      "id": "templateTCP",
+      "id": "REPLACE_WITH_ID",
       "name": "TCP Permit All",
       "description": "Permits all TPC traffic",
       "preselected": false,
       "ingressrule": [
         {
-          "ruleid": "templateTCP-rule-ingress",
+          "ruleid": "REPLACE_WITH_ID",
           "protocol": "tcp",
           "startport": 1,
           "endport": 65535,
@@ -30,7 +30,7 @@
       ],
       "egressrule": [
         {
-          "ruleid": "templateTCP-rule-egress",
+          "ruleid": "REPLACE_WITH_ID",
           "protocol": "tcp",
           "startport": 1,
           "endport": 65535,
@@ -39,14 +39,14 @@
       ]
     },
     {
-      "id": "templateICMP",
+      "id": "REPLACE_WITH_ID_1",
       "name": "ICMP Permit Egress",
       "description": "Permits all egress ICMP traffic",
       "preselected": true,
       "ingressrule": [],
       "egressrule": [
         {
-          "ruleid": "templateICMP-rule-egress",
+          "ruleid": "REPLACE_WITH_ID",
           "icmpcode": -1,
           "icmptype": -1,
           "protocol": "icmp",
@@ -57,7 +57,7 @@
   ],
   "imageGroups": [
     {
-      "id": "id-234",
+      "id": "REPLACE_WITH_ID",
       "translations": {
         "ru": "Имя группы",
         "en": "Group Name"
@@ -83,7 +83,7 @@
   ],
   "customComputeOfferingParameters": [
     {
-      "offeringId": "73cdef05-d01f-49ad-8ecb-4f2ffd7d8e26",
+      "offeringId": "REPLACE_WITH_ID",
       "cpunumber": {
         "min": 2,
         "max": 8,
@@ -103,8 +103,8 @@
   ],
   "defaultComputeOffering": [
     {
-      "zoneId": "415db026-1135-496e-9383-0c820a75694e",
-      "offeringId": "f216bd08-947a-4022-8271-c29e9acfffb9"
+      "zoneId": "REPLACE_WITH_ID",
+      "offeringId": "REPLACE_WITH_ID"
     }
   ],
   "offeringCompatibilityPolicy": {
@@ -113,7 +113,7 @@
   },
   "computeOfferingClasses": [
     {
-      "id": "classId-1",
+      "id": "REPLACE_WITH_ID",
       "name": {
         "ru": "Имя класса - 1",
         "en": "Class name - 1"
@@ -123,11 +123,11 @@
         "en": "Class description - 1"
       },
       "computeOfferings": [
-        "9c81af12-f15b-41f0-9dec-2a837e1dec29"
+        "REPLACE_WITH_ID"
       ]
     },
     {
-      "id": "classId-2",
+      "id": "REPLACE_WITH_ID",
       "name": {
         "ru": "Имя класса - 2",
         "en": "Class name - 2"
@@ -137,16 +137,16 @@
         "en": "Class description - 2"
       },
       "computeOfferings": [
-        "9c81af12-f15b-41f0-9dec-2a837e1dec29"
+        "REPLACE_WITH_ID"
       ]
     }
   ],
   "serviceOfferingAvailability": {
     "filterOfferings": true,
     "zones": {
-      "415db026-1135-496e-9383-0c820a75694e": {
-        "diskOfferings": ["9c81af12-f15b-41f0-9dec-2a837e1d23er"],
-        "computeOfferings": ["9c81af12-f15b-41f0-9dec-2a837e1dec29"]
+      "REPLACE_WITH_ID": {
+        "diskOfferings": ["REPLACE_WITH_ID"],
+        "computeOfferings": ["REPLACE_WITH_ID"]
       }
     }
   },
