--- a/src/config/config-example.json
+++ b/src/config/config-example.json
@@ -15,13 +15,13 @@
   ],
   "securityGroupTemplates": [
     {
-      "id": "REPLACE_WITH_ID",
+      "id": "templateTCP",
       "name": "TCP Permit All",
       "description": "Permits all TPC traffic",
       "preselected": false,
       "ingressrule": [
         {
-          "ruleid": "REPLACE_WITH_ID",
+          "ruleid": "templateTCP-rule-ingress",
           "protocol": "tcp",
           "startport": 1,
           "endport": 65535,
@@ -30,7 +30,7 @@
       ],
       "egressrule": [
         {
-          "ruleid": "REPLACE_WITH_ID",
+          "ruleid": "templateTCP-rule-egress",
           "protocol": "tcp",
           "startport": 1,
           "endport": 65535,
@@ -39,14 +39,14 @@
       ]
     },
     {
-      "id": "REPLACE_WITH_ID_1",
+      "id": "templateICMP",
       "name": "ICMP Permit Egress",
       "description": "Permits all egress ICMP traffic",
       "preselected": true,
       "ingressrule": [],
       "egressrule": [
         {
-          "ruleid": "REPLACE_WITH_ID",
+          "ruleid": "templateICMP-rule-egress",
           "icmpcode": -1,
           "icmptype": -1,
           "protocol": "icmp",
@@ -57,7 +57,7 @@
   ],
   "imageGroups": [
     {
-      "id": "REPLACE_WITH_ID",
+      "id": "id-234",
       "translations": {
         "ru": "Имя группы",
         "en": "Group Name"
@@ -113,7 +113,7 @@
   },
   "computeOfferingClasses": [
     {
-      "id": "REPLACE_WITH_ID",
+      "id": "classId-1",
       "name": {
         "ru": "Имя класса - 1",
         "en": "Class name - 1"
@@ -127,7 +127,7 @@
       ]
     },
     {
-      "id": "REPLACE_WITH_ID",
+      "id": "classId-2",
       "name": {
         "ru": "Имя класса - 2",
         "en": "Class name - 2"
