feat(sidebar): implement the ability to resize details sidebar

--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
             "assets": ["src/config", "src/i18n", "src/css", "src/img", "src/agreements"],
             "styles": [
               "node_modules/@mdi/font/css/materialdesignicons.min.css",
+              "node_modules/angular2-draggable/css/resizable.min.css",
               "src/style/app.scss"
             ],
             "scripts": []
