--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "ajv": "^6.5.2",
     "ajv-errors": "^1.0.0",
     "ajv-keywords": "^3.2.0",
+    "angular2-draggable": "^2.1.4",
     "chart.js": "2.7.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
