--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
     "ng-dynamic-component": "^3.0.0",
     "ng2-dragula": "1.5.0",
     "ngx-clipboard": "^11.1.7",
-    "resize-observer-polyfill": "^1.5.0",
     "ngx-infinite-scroll": "^6.0.1",
+    "resize-observer-polyfill": "^1.5.0",
     "rxjs": "^6.3.2",
     "showdown": "^1.8.4",
     "uuid": "^3.1.0",
@@ -71,6 +71,7 @@
     "@angular/language-service": "6.1.8",
     "@angularclass/hmr": "^2.1.3",
     "@types/jasmine": "~2.8.6",
+    "@types/jasminewd2": "^2.0.6",
     "@types/node": "^8.0.16",
     "@types/showdown": "^1.7.1",
     "codelyzer": "~4.2.1",
