feat(vm-logs): request frequency and requested interval

--- a/src/config/config-example.json
+++ b/src/config/config-example.json
@@ -7,6 +7,10 @@
     "pulse": true,
     "vmLogs": true
   },
+  "vmLogs": {
+    "autoUpdateRefreshFrequency": 1,
+    "autoUpdateRequestedInterval": 30
+  },
   "vmColors": [
     { "value": "#F44336" },
     { "value": "#E91E63" },
