--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.1.8",
-    "@angular/cdk": "6.4.7",
-    "@angular/common": "6.1.8",
-    "@angular/core": "6.1.8",
-    "@angular/forms": "6.1.8",
-    "@angular/http": "6.1.8",
-    "@angular/material": "6.4.7",
-    "@angular/platform-browser": "6.1.8",
-    "@angular/platform-browser-dynamic": "6.1.8",
-    "@angular/platform-server": "6.1.8",
-    "@angular/router": "6.1.8",
+    "@angular/animations": "7.1.2",
+    "@angular/cdk": "7.1.1",
+    "@angular/common": "7.1.2",
+    "@angular/core": "7.1.2",
+    "@angular/forms": "7.1.2",
+    "@angular/http": "7.1.2",
+    "@angular/material": "7.1.1",
+    "@angular/platform-browser": "7.1.2",
+    "@angular/platform-browser-dynamic": "7.1.2",
+    "@angular/platform-server": "7.1.2",
+    "@angular/router": "7.1.2",
     "@mdi/font": "^2.7.94",
     "@ng-idle/core": "6.0.0-beta.3",
     "@ng-idle/keepalive": "6.0.0-beta.3",
@@ -59,18 +59,19 @@
     "ngx-clipboard": "^11.1.7",
     "ngx-infinite-scroll": "^6.0.1",
     "resize-observer-polyfill": "^1.5.0",
-    "rxjs": "^6.3.2",
+    "rxjs": "^6.3.3",
     "showdown": "^1.8.4",
+    "tslib": "^1.9.0",
     "uuid": "^3.1.0",
     "web-animations-js": "2.3.1",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "^6.2.1",
-    "@angular/compiler": "6.1.8",
-    "@angular/compiler-cli": "6.1.8",
-    "@angular/language-service": "6.1.8",
+    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular/cli": "^7.1.2",
+    "@angular/compiler": "7.1.2",
+    "@angular/compiler-cli": "7.1.2",
+    "@angular/language-service": "7.1.2",
     "@angularclass/hmr": "^2.1.3",
     "@types/jasmine": "~2.8.6",
     "@types/node": "^8.0.16",
@@ -98,6 +99,6 @@
     "tslint": "~5.11.0",
     "tslint-config-airbnb": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
-    "typescript": "~2.7.2"
+    "typescript": "~3.1.6"
   }
 }
