--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "@types/jasmine": "~2.8.6",
     "@types/node": "^8.0.16",
     "@types/showdown": "^1.7.1",
-    "codelyzer": "~4.2.1",
+    "codelyzer": "^4.5.0",
     "conventional-changelog": "^2.0.3",
     "conventional-changelog-cli": "^2.0.5",
     "coveralls": "^3.0.2",
@@ -92,13 +92,13 @@
     "karma-junit-reporter": "^1.2.0",
     "karma-mocha-reporter": "^2.2.3",
     "ngrx-store-freeze": "^0.2.0",
-    "prettier": "1.14.3",
+    "prettier": "^1.15.3",
     "pretty-quick": "^1.8.0",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.11.0",
-    "tslint-config-airbnb": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0",
+    "tslint": "^5.11.0",
+    "tslint-config-airbnb": "^5.11.1",
+    "tslint-config-prettier": "^1.17.0",
     "typescript": "~3.1.6"
   }
 }
