--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "chart.js": "2.7.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "immutability-helper": "^2.9.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "ng-dynamic-component": "^3.0.0",
