feat(vm-snapshot): manage maximum VM snapshots amount in config.json

--- a/src/config/config-example.json
+++ b/src/config/config-example.json
@@ -18,6 +18,7 @@
     { "value": "#673AB7" },
     { "value": "#3F51B5" }
   ],
+  "vmSnapLimit": 1,
   "securityGroupTemplates": [
     {
       "id": "templateTCP",
