--- a/src/config/config-example.json
+++ b/src/config/config-example.json
@@ -74,6 +74,7 @@
   "defaultTimeFormat": "hour24",
   "defaultTheme": "blue-red",
   "sessionTimeout": 30,
+  "autoGenerateUserKeys": true,
   "customComputeOfferingParameters": [
     {
       "offeringId": "REPLACE_WITH_ID",
