Replaced all internal imports of 3rd party pkgs with public API

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ng": "ng",
     "start": "npm run build-themes && ng serve",
     "hmr": "npm run build-themes && ng serve --configuration hmr",
-    "build-themes": "sh ./scripts/generate-themes.sh",
+    "build-themes": "node-sass src/style/themes -o src/css/themes",
     "build": "npm run build-themes && node --max_old_space_size=8192 ./node_modules/@angular/cli/bin/ng build",
     "test": "ng test --code-coverage --watch=false",
     "test:watch": "ng test",
@@ -45,7 +45,6 @@
     "@ngrx/store-devtools": "6.1.0",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
-    "@types/lodash": "^4.14.119",
     "ajv": "^6.5.2",
     "ajv-errors": "^1.0.0",
     "ajv-keywords": "^3.2.0",
@@ -76,6 +75,7 @@
     "@angular/language-service": "7.1.2",
     "@angularclass/hmr": "^2.1.3",
     "@types/jasmine": "~2.8.6",
+    "@types/lodash": "^4.14.119",
     "@types/node": "^8.0.16",
     "@types/showdown": "^1.7.1",
     "codelyzer": "^4.5.0",
