feat(resource-quotas): admin and user interface (#1532)
PR close #1458

--- a/src/config/config-example.json
+++ b/src/config/config-example.json
@@ -5,11 +5,16 @@
   "extensions": {
     "webShell": true,
     "pulse": true,
-    "vmLogs": true
+    "vmLogs": true,
+    "resourceLimits": true
   },
   "vmLogs": {
     "autoUpdateRefreshFrequency": 1,
     "autoUpdateRequestedInterval": 30
+  },
+  "resourceLimits": {
+    "realm": "resource-limits",
+    "env": "prod"
   },
   "vmColors": [
     { "value": "#F44336" },
