--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "angular2-draggable": "^2.1.8",
     "chart.js": "2.7.0",
     "core-js": "^2.4.1",
+    "deep-diff": "^1.0.2",
     "hammerjs": "^2.0.8",
+    "immutability-helper": "^2.9.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "ng-dynamic-component": "^3.0.0",
