small fixes in documentation

--- a/src/config/config-example.json
+++ b/src/config/config-example.json
@@ -18,7 +18,10 @@
     { "value": "#673AB7" },
     { "value": "#3F51B5" }
   ],
-  "vmSnapLimit": 1,
+  "vmSnapLimit": {
+    "enable": false,
+    "snapshotsLimit": 0
+  },
   "securityGroupTemplates": [
     {
       "id": "templateTCP",
