feat(vm-snapshot): manage maximum VM snapshots amount in config.json (#1523)
PR close #1415

--- a/src/config/config-example.json
+++ b/src/config/config-example.json
@@ -23,6 +23,10 @@
     { "value": "#673AB7" },
     { "value": "#3F51B5" }
   ],
+  "vmSnapLimit": {
+    "enable": false,
+    "snapshotsLimit": 0
+  },
   "securityGroupTemplates": [
     {
       "id": "templateTCP",
