--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "deep-diff": "^1.0.2",
     "hammerjs": "^2.0.8",
     "immutability-helper": "^2.9.0",
+    "js-base64": "^2.5.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "ng-dynamic-component": "^3.0.0",
@@ -79,6 +80,7 @@
     "@angularclass/hmr": "^2.1.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "^2.0.6",
+    "@types/js-base64": "^2.3.1",
     "@types/node": "^8.0.16",
     "@types/showdown": "^1.7.1",
     "codelyzer": "^4.5.0",
