fix: fixed fix cookies path when use base_href

--- a/.build/nginx.conf
+++ b/.build/nginx.conf
@@ -22,6 +22,10 @@ server {
                   if match then
                       cookies[i] = ngx.re.sub(cookie , "Secure", "", "i")
                   end
+                  local match2 = ngx.re.match(cookie, "Path=/client", "i")
+                  if match2 then
+                    cookies[i] = ngx.re.sub(cookie , "Path=/client", "Path=BASE_HREFclient", "i")
+                  end
               end
               ngx.header["Set-Cookie"] = cookies
             end
