--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: true
 dist: trusty
 
 language: node_js
@@ -10,12 +9,13 @@ services:
 
 branches:
   only:
-  - master
-  - /^\d+\.\d+\.\d+$/
+    - master
+    - /^\d+\.\d+\.\d+$/
 
 cache: yarn
 
 addons:
+  chrome: stable
   apt:
     packages:
       - docker-ce
@@ -25,14 +25,8 @@ env:
     - DOCKER_USER=bwsw
     - DOCKER_REPO=cloudstack-ui
 
-before_install:
- - export CHROME_BIN=/usr/bin/google-chrome
- - export DISPLAY=:99.0
- - sh -e /etc/init.d/xvfb start
- - sudo apt-get update
- - sudo apt-get install -y libappindicator1 fonts-liberation
- - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
- - sudo dpkg -i google-chrome*.deb
+install:
+  - yarn install
 
 after_success:
   - yarn coveralls
@@ -42,6 +36,6 @@ before_deploy:
 
 deploy:
   - provider: script
-    script: ./scripts/publish-docker-image.sh
+    script: ./scripts/ci/publish-docker-image.sh
     on:
       all_branches: true
