--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-junit-reporter": "^1.2.0",
     "karma-mocha-reporter": "^2.2.3",
+    "ng-mocks": "^8.1.0",
     "ngrx-store-freeze": "^0.2.0",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.8.0",
