--- a/projects/http-access-helper/package.json
+++ b/projects/http-access-helper/package.json
@@ -7,5 +7,10 @@
   "dependencies": {
     "axios": "^0.19.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "jasmine": "^3.5.0",
+    "moxios": "^0.4.0",
+    "supertest": "^4.0.2"
   }
 }
