add http helper endpoint to config files

--- a/.build/nginx.conf
+++ b/.build/nginx.conf
@@ -41,6 +41,10 @@ server {
     proxy_pass  WEBSHELL_PLUGIN_ENDPOINT;
   }
 
+  location /cs-extensions/http-access-helper {
+    proxy_pass  HTTP_ACCESS_HELPER_ENDPOINT;
+  }
+
   gzip on;
   gzip_comp_level    5;
   gzip_min_length    256;
