--- a/projects/http-access-helper/package.json
+++ b/projects/http-access-helper/package.json
@@ -4,6 +4,10 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "private": true,
+  "scripts": {
+    "start": "node index.js",
+    "test": "jasmine"
+  },
   "dependencies": {
     "axios": "^0.19.0",
     "express": "^4.17.1"
