supply http access helper with the built in docker image

--- a/.build/nginx.conf
+++ b/.build/nginx.conf
@@ -42,6 +42,7 @@ server {
   }
 
   location /cs-extensions/http-access-helper {
+    rewrite /cs-extensions/http-access-helper(/?)(.*) /$2 break;
     proxy_pass  HTTP_ACCESS_HELPER_ENDPOINT;
   }
 
