fix: fixed lua script

--- a/.build/nginx.conf
+++ b/.build/nginx.conf
@@ -20,12 +20,13 @@ server {
               for i, cookie in ipairs(cookies) do
                   local match = ngx.re.match(cookie, "Secure", "i")
                   if match then
-                      cookies[i] = ngx.re.sub(cookie , "Secure", "", "i")
+                      cookie = ngx.re.sub(cookie , "Secure", "", "i")
                   end
                   local match2 = ngx.re.match(cookie, "Path=/client", "i")
                   if match2 then
-                    cookies[i] = ngx.re.sub(cookie , "Path=/client", "Path=BASE_HREFclient", "i")
+                    cookie = ngx.re.sub(cookie , "Path=/client", "Path=BASE_HREFclient", "i")
                   end
+                  cookies[i] = cookie
               end
               ngx.header["Set-Cookie"] = cookies
             end
