fix cookies rewriting script

--- a/.build/nginx.conf
+++ b/.build/nginx.conf
@@ -11,25 +11,24 @@ server {
   }
 
   location /client {
-    header_filter_by_lua '
-            local cookies = ngx.header["Set-Cookie"]
-            if cookies then
-              if type(cookies) == "string" then
-                  cookies = {cookies}
-              end
-              for i, cookie in ipairs(cookies) do
-                  local match = ngx.re.match(cookie, "Secure", "i")
-                  if match then
-                      cookies[i] = ngx.re.sub(cookie , "Secure", "", "i")
-                  end
-                  local match2 = ngx.re.match(cookie, "Path=/client", "i")
-                  if match2 then
-                    cookies[i] = ngx.re.sub(cookie , "Path=/client", "Path=BASE_HREFclient", "i")
-                  end
-              end
-              ngx.header["Set-Cookie"] = cookies
-            end
-          ';
+    header_filter_by_lua_block {
+        local cookies = ngx.header["Set-Cookie"]
+        if cookies then
+          if type(cookies) == "string" then
+            cookies = {cookies}
+          end
+          for i, cookie in ipairs(cookies) do
+              --- Remove "Secure" from a cookie to handle proxying
+              --- http to https
+              cookie = ngx.re.sub(cookie , "Secure", "", "i")
+              --- Rewrite the path of the cookie
+              cookie = ngx.re.sub(cookie , "Path=([^;?]+)", "Path=BASE_HREFclient", "i")
+
+              cookies[i] = cookie
+          end
+          ngx.header["Set-Cookie"] = cookies
+        end
+    }
     proxy_pass  CLIENT_ENDPOINT;
   }
 
