--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@ngrx/effects": "6.1.0",
     "@ngrx/entity": "6.1.0",
     "@ngrx/router-store": "6.1.0",
-    "@ngrx/store": "6.1.0",
+    "@ngrx/store": "^8.6.0",
     "@ngrx/store-devtools": "6.1.0",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
