--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "ajv-keywords": "^3.2.0",
     "angular2-draggable": "^2.1.8",
     "chart.js": "2.7.0",
+    "chromedriver": "^79.0.0",
     "core-js": "^2.4.1",
     "deep-diff": "^1.0.2",
     "hammerjs": "^2.0.8",
@@ -68,6 +69,7 @@
     "tslib": "^1.9.0",
     "uuid": "^3.1.0",
     "web-animations-js": "2.3.1",
+    "webdriver-manager": "^12.1.7",
     "xregexp": "^4.2.4",
     "zone.js": "0.8.26"
   },
@@ -103,7 +105,7 @@
     "ngrx-store-freeze": "^0.2.0",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.8.0",
-    "protractor": "~5.3.0",
+    "protractor": "^5.4.2",
     "ts-node": "~5.0.1",
     "tslint": "^5.11.0",
     "tslint-config-airbnb": "^5.11.1",
